Added styling for form actions, removed security text if logged in

--- a/mysite/css/demo.css
+++ b/mysite/css/demo.css
@@ -53,6 +53,9 @@ nav.secondary {
 .homeColumn .Actions {
 	margin-bottom: 0;
 }
+.Actions {
+	overflow: hidden;
+}
 .Actions a.btn {
     background: #005b92;
     color: #fff;
