--- a/mysite/css/demo.css
+++ b/mysite/css/demo.css
@@ -14,6 +14,213 @@
 	display: block;
 }
 
+
+/* Login Bar */
+.login-bar {
+    height: 70px;
+    width: 100%;
+    position: relative;
+    top: 0;
+    background-color: #142237;
+    z-index: 100;
+    color: white;
+}
+.login-bar .row {
+	max-width: 1140px;
+	margin: 0 auto;
+}
+.login-bar .row h2 {
+	display: none;
+}
+
+
+.login-form {
+    line-height: 65px;
+}
+.login-form p {
+	display: inline-block;
+	font-size: 14px;
+	line-height: normal;
+	margin: auto;
+	vertical-align: middle;
+	width: 36%;
+	padding-left: 30px;
+	padding-right: 10px;
+}
+.login-form form{
+	float: right;
+	width: auto;
+}
+.form-holder {
+    display: inline-block;
+    float: right;
+    margin-bottom: 0;
+    vertical-align: top;
+}
+.form-holder button {
+	background-color: #47c2ef;
+	border: 0;
+	color: #142237;
+	border-radius: 23px;
+	border: 1px solid #47c2ef;
+	padding: 7.5px 15px;
+	font-size: 15px;
+	text-transform: uppercase;
+	font-weight: 700;
+	margin: 15px 5px 0 0;
+	transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease, width 0.3s ease, opacity 0.3s ease;
+}
+
+.form-holder button:hover {
+    background-color: #142237;
+	color: white;
+	border:1px solid #47c2ef;
+}
+
+.form-holder select {
+	background-color: transparent;
+	color: white;
+	height: 38px;
+	text-transform: uppercase;
+	font-weight: 700;
+	width: 55px;
+	border: 0;
+	margin-right: 24px;
+	-webkit-appearance:none;
+	-moz-appearance:none;
+	-o-appearance:none;
+    appearance:none;
+	text-indent: 0.01px;
+	text-overflow: '';
+}
+.form-holder select::-ms-expand{
+  display:none;
+}
+
+
+span.dropdown {
+    position:relative;
+    display:inline-block;
+    z-index:0
+}
+span.dropdown select {
+    z-index:1;
+}
+
+span.dropdown:before {
+    display:block;
+    position:absolute;
+    content:'';
+    right:23px;
+    top:5px;
+    height:38px;
+    width:25px;
+    margin:2px;
+    background:#142237;
+    z-index:5;
+}
+select option {
+    background: #142237 !important;
+    color: white !important;
+}
+select:-moz-focusring {
+    color: transparent;
+    text-shadow: 0 0 0 #fff;
+}
+
+fieldset {
+    display: none;
+    margin-bottom: 0;
+}
+fieldset .form-item {
+	display: inline-block;
+}
+fieldset .form-item label {
+	display: none;
+}
+fieldset .form-item input {
+	background: rgba(255, 255, 255, 0.2);
+	color: white;
+	font-size: 14px;
+	width: 100px;
+	height: 38px;
+	margin: 0 5px 0 0;
+	font-size: 14px;
+	padding: 0 15px;
+	border: 0;
+	border-radius: 5px;
+	transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease, width 0.3s ease, opacity 0.3s ease;
+}
+fieldset .form-item input:focus {
+    outline: none;
+	background-color: white;
+	color: #455563;
+}
+
+/* Mobile first queries */
+
+    /* Larger than phablet */
+    /*@media (min-width: 550px) {
+        .login-bar .container{
+                width: 100%;
+            }
+        .login-bar .six.columns{
+                width: 92%;
+            }
+    }*/
+
+    /* Larger than tablet */
+    @media (min-width: 750px) {
+        .login-form p {width: 25%;}
+        .login-form fieldset {
+            display: inline-block;
+			float: left;
+			margin-right: 10px;
+        }
+    }
+
+    /* Larger than desktop */
+    @media (min-width: 1000px) {
+        .login-bar {
+            height: 100px;
+        }
+		.login-bar .row h2{
+			display: inline-block;
+			font-size: 42px;
+			margin-top: 42px;
+			padding-left: 30px
+		}
+		.login-bar .row .six.columns{
+			width: 48%;
+			display: inline;
+		}
+        .login-form {
+            line-height: inherit;
+            float: right;
+        }
+		.login-form p {
+			display: block;
+			line-height: inherit;
+			margin: 16px 0 7px 0;
+			vertical-align: inherit;;
+			width: 50%;
+			padding-left: 0;
+		}
+        .container{
+            width: 100%;
+        }
+		.form-holder button {
+			margin-top: 0;
+		}
+		.dropdown select {
+			padding-top: 8px;
+		}
+    }
+
+
+
+
+
 /* Header */
 .header .inner,
 .tablet-nav .header .inner {
@@ -96,7 +303,7 @@ nav.secondary {
 /* BREAKPOINT 920px for homepage 600px width video */
 
 /* when changing the breakpoint below, change it ito the same value in the script.js file as well */
-@media only screen and (max-width: 920px) { 
+@media only screen and (max-width: 920px) {
 	.tablet-nav .header .inner {
 		padding-top: 35px;
 	}
