--- a/mysite/css/demo.css
+++ b/mysite/css/demo.css
@@ -15,6 +15,7 @@
 }
 
 
+
 /* Login Bar */
 .login-bar {
     height: 70px;
@@ -25,6 +26,9 @@
     z-index: 100;
     color: white;
 	text-align: center;
+}
+.ie8 .login-bar {
+	height: 100px;
 }
 
 
@@ -40,7 +44,13 @@
 .login-bar .logo-type {
 	display: none;
 }
-
+.ie8 .fallback-logo {
+	float: left;
+	margin: 28px 0 0 28px;
+	width: 165px;
+	height: 42px;
+	background: url(http://demo.dev/mysite/images/logotype.png) no-repeat;
+}
 
 
 
@@ -49,17 +59,29 @@
 	margin: 0 auto;
 	height: 100%;
 }
-
 .login-form h3{
 	display: none;
 }
+.ie8 .login-form h3{
+	line-height: normal;
+	font-size: 24px;
+	display: inline-block;
+	margin-top: 38px;
+	margin-right: 18px;
+}
+
+
+
 .login-form form{
 	width: auto;
 	display: inline-block;
 	vertical-align: top;
 	margin-top: 18px;
 }
-.form-holder button {
+.ie8 .login-form form{
+	margin-top: 30px;
+}
+.login-form button {
 	background-color: #142237;
 	color: #47c2ef;
 	border:2px solid #47c2ef;
@@ -73,14 +95,14 @@
 	transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease, width 0.3s ease, opacity 0.3s ease;
 }
 
-.form-holder button:hover {
+.login-form button:hover {
 	background-color: #47c2ef;
 	color: #142237;
 	border: 2px solid #47c2ef;
 }
-.form-holder button:focus {outline:0;}
+.login-form button:focus {outline:0;}
 
-.form-holder select {
+.login-form select {
 	background-color: transparent;
 	color: white;
 	display: inline-block;
@@ -98,10 +120,10 @@
 	text-overflow: '';
 	transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease, width 0.3s ease, opacity 0.3s ease;
 }
-.form-holder select:hover {
+.login-form select:hover {
 	color: #47c2ef;
 }
-.form-holder select::-ms-expand{
+.login-form select::-ms-expand{
   display:none;
 }
 
@@ -139,16 +161,26 @@ select:hover:-moz-focusring {
     text-shadow: 0 0 0 #fff;
 }
 
-fieldset {
+.login-form fieldset {
     display: none;
     margin-bottom: 0;
 }
-fieldset .form-item {
+.login-form fieldset .form-item {
 	display: none;
 }
 
 .login-bar a.return {
 	display: none;
+}
+.ie8 .login-bar a.return {
+	display: inline-block;
+	font-size: 18px;
+	width: 200px;
+	color: white;
+	text-decoration: none;
+	float: right;
+	margin-top: 40px;
+	margin-right: 30px;
 }
 
 
@@ -187,6 +219,11 @@ fieldset .form-item {
 			float: left;
 			margin: 22px 0 0 14px;
 		}
+
+
+
+
+
 		.login-form {
 			float: none;
 		}
@@ -197,12 +234,12 @@ fieldset .form-item {
 		.login-form form{
 			margin-top: 30px;
 		}
-		.form-holder button {
+		.login-form button {
 			font-size: 18px;
 			text-transform: none;
 			letter-spacing: normal;
 		}
-		.form-holder select {
+		.login-form select {
 			margin-top: 3px;
 		}
 		.login-bar a.return {
