--- a/mysite/css/demo.css
+++ b/mysite/css/demo.css
@@ -22,10 +22,11 @@
     width: 100%;
     position: relative;
     top: 0;
-    background-color: #142237;
+    background-color: #1a364c;
     z-index: 100;
     color: white;
 	text-align: center;
+	border-bottom: 5px solid #132236;
 }
 .ie8 .login-bar {
 	height: 100px;
@@ -85,9 +86,9 @@
 	margin-top: 30px;
 }
 .login-form button {
-	background-color: #142237;
-	color: #47c2ef;
-	border:2px solid #47c2ef;
+	background-color: #47c2ef;
+	color: #1a364c;
+	border: 2px solid #47c2ef;
 	border-radius: 23px;
 	display: inline-block;
 	padding: 7.5px 15px;
@@ -99,9 +100,9 @@
 }
 
 .login-form button:hover {
-	background-color: #47c2ef;
-	color: #142237;
-	border: 2px solid #47c2ef;
+	background-color: #1a364c;
+	color: white;
+	border:2px solid #47c2ef;
 }
 .login-form button:focus {outline:0;}
 
@@ -148,7 +149,7 @@ span.dropdown:before {
     top:0;
     height:38px;
     width:28px;
-    background:#142237;
+    background:#1a364c;
     z-index:5;
 }
 select option {
@@ -178,9 +179,10 @@ select:hover:-moz-focusring {
 .ie8 .login-bar a.return {
 	display: inline-block;
 	font-size: 18px;
-	width: 200px;
+	width: 150px;
 	color: white;
 	text-decoration: none;
+	text-align: right;
 	float: right;
 	margin-top: 40px;
 	margin-right: 30px;
@@ -195,6 +197,7 @@ select:hover:-moz-focusring {
 		    height: 58%;
 		    float: left;
 		    margin: 16px 0 0 12px;
+			opacity: 0
 		}
 		.login-form {
 			float: right;
@@ -211,7 +214,7 @@ select:hover:-moz-focusring {
     /* Larger than desktop */
     @media (min-width: 1000px) {
         .login-bar {
-            height: 100px;
+            height: 120px;
         }
 		.login-bar .logo-icon {
 			height: 50%;
@@ -232,13 +235,13 @@ select:hover:-moz-focusring {
 		}
 		.login-form h3 {
 			font-size: 24px;
-			margin-top: 38px;
+			margin-top: 46px;
 		}
 		.login-form form{
-			margin-top: 30px;
+			margin-top: 36px;
 		}
 		.login-form button {
-			font-size: 18px;
+			font-size: 22px;
 			text-transform: none;
 			letter-spacing: normal;
 		}
@@ -248,20 +251,38 @@ select:hover:-moz-focusring {
 		.login-bar a.return {
 			display: inline-block;
 			font-size: 18px;
-			width: 200px;
-			color: white;
+			color: #768694;
 			text-decoration: none;
+			text-align: right;
 			float: right;
 			margin-top: 40px;
-			margin-right: 30px;
+			margin-right: 40px;
 			transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease, width 0.3s ease, opacity 0.3s ease;
+			width: 150px;
 		}
 		.login-bar a.return:hover {
 			color: #ccc;
 		}
     }
+/* Header bar override to play well with Login Bar */
+.header {
+	background-color: #eee;
+	border-bottom: 0px solid #eee;
+}
+.header .primary li.current::after {
+	color: #fff;
+}
+.header h1 {
+	color: #777;
+}
 
+.header .primary li.current a {
+	color: #B80000;
+}
 
+.header .primary li a:hover, .header .primary li a:active {
+	color: #B80000;
+}
 
 /* Header */
 .header .inner,
