Revert "IE8 and IE9 visual tweaks"
This reverts commit ecdd18b7ff8164641b767853ddb10ba5e31ae4e1.

--- a/mysite/css/demo.css
+++ b/mysite/css/demo.css
@@ -22,10 +22,11 @@
     width: 100%;
     position: relative;
     top: 0;
-    background-color: #142237;
+    background-color: #1a364c;
     z-index: 100;
     color: white;
 	text-align: center;
+	border-bottom: 5px solid #132236;
 }
 .ie8 .login-bar {
 	height: 100px;
@@ -146,9 +147,9 @@ span.dropdown:before {
     content:'';
     right:-10px;
     top:0;
-    height:49px;
+    height:38px;
     width:28px;
-    background:#142237;
+    background:#1a364c;
     z-index:5;
 }
 select option {
@@ -237,7 +238,7 @@ select:hover:-moz-focusring {
 			margin-top: 46px;
 		}
 		.login-form form{
-			margin-top: 35px;
+			margin-top: 36px;
 		}
 		.login-form button {
 			font-size: 22px;
